--- a/client/src/assets/css/base.css
+++ b/client/src/assets/css/base.css
@@ -3,4 +3,6 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  text-decoration: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
