--- a/client/src/assets/css/base.css
+++ b/client/src/assets/css/base.css
@@ -6,3 +6,26 @@
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+/* 解决滚动条出现挤压页面宽度开始 */
+
+
+html {
+  overflow-y: scroll;
+}
+
+:root {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+:root body {
+  position: absolute;
+}
+
+body {
+  width: 100vw;
+  overflow: hidden;
+}
+
+/* 解决滚动条出现挤压页面宽度结束 */
