--- a/client/src/assets/css/base.css
+++ b/client/src/assets/css/base.css
@@ -2,13 +2,12 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 /* 解决滚动条出现挤压页面宽度开始 */
-
 
 html {
   overflow-y: scroll;
@@ -29,3 +28,19 @@ body {
 }
 
 /* 解决滚动条出现挤压页面宽度结束 */
+
+/*滚动条样式*/
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #ccc;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
